--- a/index.html
+++ b/index.html
@@ -20,44 +20,44 @@
         <h1>LISTEN TO US, FALL FOR US...</h1>
         <div class="songItemContainer">
             <div class="songItem">
-                <img  alt="1" src="1.jpg">
+<!--                 <img  alt="1" src="1.jpg"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">04:00 <i id="0" class=" songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
             <div class="songItem">
-                <img  alt="1">
+<!--                 <img  alt="1"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">03:53 <i id="1" class="songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
             <div class="songItem">
-                <img  alt="1">
+<!--                 <img  alt="1"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">03:24 <i id="2" class="songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
             
             <div class="songItem">
-                <img  alt="1">
+<!--                 <img  alt="1"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">02:56 <i id="3" class="songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
            
             <div class="songItem">
-                <img  alt="1">
+<!--                 <img  alt="1"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">04:32 <i id="4" class="songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
             <div class="songItem">
-                <img  alt="1">
+<!--                 <img  alt="1"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">02:33 <i id="5" class="songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
             <div class="songItem">
-                <img  alt="1">
+<!--                 <img  alt="1"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">12:07 <i id="6" class="songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
             <div class="songItem">
-                <img  alt="1">
+<!--                 <img  alt="1"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">04:07 <i id="7" class="songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
