--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <h1>LISTEN TO US, FALL FOR US...</h1>
         <div class="songItemContainer">
             <div class="songItem">
-                <img  alt="1">
+<!--                 <img  alt="1"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">04:00 <i id="0" class=" songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
             <div class="songItem">
-                <img  alt="2">
+<!--                 <img  alt="2"> -->
                 <span class="songName">Let me love you</span>
                 <span class="songlistplay"><span class="timestamp">03:53 <i id="1" class="songItemPlay fa-solid fa-circle-play"></i></span></span>
             </div>
